--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
       problem—and how they critique each other’s attempts.
     </p>
 
+    <p><strong>Best viewed on desktop</strong> for the embedded model solutions.</p>
+
     <p>
       This benchmark uses models served via
       <a href="https://openrouter.ai" target="_blank" rel="noopener noreferrer"
